--- a/MvvmCross.ReactiveUI.Interop/MvvmCross.ReactiveUI.Interop.csproj
+++ b/MvvmCross.ReactiveUI.Interop/MvvmCross.ReactiveUI.Interop.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DisposableAction.cs" />
     <Compile Include="MvxReactiveObject.cs" />
     <Compile Include="MvxReactiveViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
