--- a/nuspec/MvvmCross.ReactiveUI.Interop.nuspec
+++ b/nuspec/MvvmCross.ReactiveUI.Interop.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>MvvmCross.ReactiveUI.Interop</id>
-        <version>2.0.0</version>
+        <version>2.0.1</version>
         <title>MvvmCross and ReactiveUI Interop</title>
         <summary>MvvmCross and ReactiveUI Interop</summary>
         <description>
@@ -19,7 +19,8 @@ Proper interop between MvvmCross and ReactiveUI via MvxReactiveViewModel
             <dependency id="reactiveui" version="[7, 8)" />
         </dependencies>
         <releaseNotes>
-Initial release
+2.0.1
+SetProperty will fire ToProperty from RXUI now.  thanks to @kjeremy
         </releaseNotes>
     </metadata>
     <files>
